Fix wrap behavior of accomplishment stamps on base program template

--- a/credentials/apps/credentials_theme_openedx/static/sass/_layouts-rendering.scss
+++ b/credentials/apps/credentials_theme_openedx/static/sass/_layouts-rendering.scss
@@ -161,8 +161,6 @@
 }
 
 .accomplishment-stamps {
-  @extend %list-unstyled;
-
   .accomplishment-stamp-platform {
     margin-bottom: 15px;
 
@@ -181,32 +179,43 @@
     }
   }
 
-  .accomplishment-stamp-date {
-    margin-bottom: 10px;
-
+  .wrapper-inner-accomplishment-stamps {
     @include susy-breakpoint($bp-screen-lg, $susy) {
       display: inline-block;
       vertical-align: middle;
-      @include margin-right(25px);
+      width: calc(100% - 160px);
     }
-  }
 
-  .accomplishment-stamp-validity {
-    margin-bottom: 10px;
+    .accomplishment-stamp-date {
+      margin-bottom: 10px;
 
-    @include susy-breakpoint($bp-screen-lg, $susy) {
-      display: inline-block;
-      vertical-align: middle;
-      @include margin-right(25px);
+      @include susy-breakpoint($bp-screen-lg, $susy) {
+        display: inline-block;
+        vertical-align: top;
+        max-width: 30%;
+        @include margin-right(5%);
+      }
     }
-  }
 
-  .accomplishment-stamp-effort {
-    margin-bottom: 10px;
+    .accomplishment-stamp-validity {
+      margin-bottom: 10px;
 
-    @include susy-breakpoint($bp-screen-lg, $susy) {
-      display: inline-block;
-      vertical-align: middle;
+      @include susy-breakpoint($bp-screen-lg, $susy) {
+        display: inline-block;
+        vertical-align: top;
+        max-width: 30%;
+        @include margin-right(5%);
+      }
+    }
+
+    .accomplishment-stamp-effort {
+      margin-bottom: 10px;
+
+      @include susy-breakpoint($bp-screen-lg, $susy) {
+        display: inline-block;
+        vertical-align: top;
+        max-width: 30%;
+      }
     }
   }
 }
